--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -9,6 +9,10 @@
 <body>
   <h1>Make requests</h1>
   <div>
+    <h2>Info</h2>
+    <div>
+      <button type="button" onclick="info()">Api information</button>
+    </div>
     <h2>Words</h2>
     <h4>Create</h4>
     <div>
@@ -66,63 +70,73 @@
 <script>
   const BASE_URL = ''
 
-  function createWord() {
-    const userId = document.getElementById('create-userId').value
-    const word = document.getElementById('create-word').value
-    const wordCategory = document.getElementById('create-wordCategory').value
-
-    invoke(BASE_URL+`/words/${userId}`, 'POST', {word, wordCategory})
+  async function info() {
+    await invoke(BASE_URL+'/info', 'GET')
   }
+  
+  async function invoke(url, method, body = null) {    
+    const header = new Headers()
+    header.append('Content-Type', 'application/json; charset=utf-8')
+    header.append('Accept', 'application/json')
 
-  function invoke(url, method, body = null) {
     const options = {
-        method: method,
-        headers: {
-        'Content-Type': 'application/json'
-        },
-        mode: 'no-cors',
-        body: JSON.stringify(body)
+      method: method,
+      headers: header,      
+      mode: 'cors',
+      body: JSON.stringify(body)
     }
 
     if (body == null) {
       delete options.body
     }
-    
-    const promise = fetch(url, options)
 
-    promise.then((response) => {
-      console.log(response)
-    
-    }).catch((error) => {
-      console.log('Error: ', error)
-    })
+    try {
+      const response = await fetch(url, options)
+      const result = await response.json()
+      return renderResponse(JSON.stringify(result))
+    } catch (error) {
+      return renderResponse(error.message)
+    }
   }
 
-  function readWord() {
+  async function renderResponse(message) {
+    alert(message)
+    location.reload()
+  }
+  
+  async function createWord() {
+    const userId = document.getElementById('create-userId').value
+    const word = document.getElementById('create-word').value
+    const wordCategory = document.getElementById('create-wordCategory').value
+
+    await invoke(BASE_URL+`/words/${userId}`, 'POST', {word, wordCategory})
+  }
+  
+  async function readWord() {
     const userId = document.getElementById('read-userId').value
     const word = document.getElementById('read-word').value    
 
-    invoke(BASE_URL+`/words/${userId}/${word}`, 'GET')
+    await invoke(BASE_URL+`/words/${userId}/${word}`, 'GET')
   }
 
-  function readAllWords() {
+  async function readAllWords() {
     const userId = document.getElementById('read-all-userId').value
 
-    invoke(BASE_URL+`/words/${userId}`, 'GET')
+    await invoke(BASE_URL+`/words/${userId}`, 'GET')
   }
 
-  function updateWord() {
+  async function updateWord() {
     const userId = document.getElementById('update-userId').value
     const word = document.getElementById('update-word').value
     const wordCategory = document.getElementById('update-wordCategory').value
 
-    invoke(BASE_URL+`/words/${userId}`, 'PATCH', {word, wordCategory})
+    await invoke(BASE_URL+`/words/${userId}`, 'PATCH', {word, wordCategory})
   }
 
-  function deleteWord() {
+  async function deleteWord() {
     const userId = document.getElementById('delete-userId').value
     const word = document.getElementById('delete-word').value    
 
-    invoke(BASE_URL+`/words/${userId}/${word}`, 'DELETE')    
+    await invoke(BASE_URL+`/words/${userId}/${word}`, 'DELETE')    
   }
 </script>
